# MiniPaaS

./: .env.example  .gitignore  .trivyignore  LICENSE  Makefile  README.md  deploy-from-ghcr.sh  deploy.sh  docker-compose.yml  k3s-setup.sh  scan_result.json  scan_result_v2.json  setup-secret.sh  sonar-project.properties  summary.md  summarysofar.md  test-gitleaks-fail.json
.github/workflows/: ci-api-gateway.yml  ci-auth-service.yml  ci-build-service.yml  ci-deployer-service.yml  ci-deployment-service.yml  ci-frontend.yml  ci-monitoring.yml  ci-security-scanner.yml  deploy.yml  gitleaks.yml  lint.yml  python-lint.yml  security-scan.yml  typescript-lint.yml
docs/: architecture.md  deployment.md  development.md  security.md
docs/api/: README.md  service-auth-contract-v1.md
frontend/: Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  server.py  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/tests/: App.test.tsx  DeploymentCard.test.tsx  OverviewCards.test.tsx  StatusBadge.test.tsx
infra/docker/: docker-compose.yml
k8s/: configmap.yaml  ingress.yaml  namespace.yaml  secret.yaml
k8s/api-gateway/: deployment.yaml  service.yaml
k8s/app-management/: deployment.yaml  service.yaml
k8s/auth-service/: deployment.yaml  service.yaml
k8s/build-service/: deployment.yaml  service.yaml
k8s/deployer-service/: deployment.yaml  (+1 more)
scripts/: dev.sh  e2e-test.sh  lint-all.sh  setup.sh  test-all.sh
shared/python/: pyproject.toml
shared/python/cloudoku_common/: __init__.py  auth.py  config.py  logging.py
(+230 files in other folders)
